fix spacing of cards

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
 #wrapper {
   padding-top: 70px;
 }
+
+.featureCard {
+  margin-top: 10px;
+}
